# src/main/java/tech/sangdang/lmscoreapi/modules/utility/app/dto/ConfirmUploadPublicCommand.java
@@ -1,0 +1,3 @@
+package tech.sangdang.lmscoreapi.modules.utility.app.dto;
+
+public record ConfirmUploadPublicCommand(String objectKey) {}
